# vex-shell

./: LICENSE
ref/: src_dotconfig.zsh  src_gpg.zsh
reference/: script_setenv.zsh
reference/autocomplete/: _setenv
reference/setenv/: chooseenv_prompt.zsh  create_environment.zsh  help.zsh  list_environments.zsh  load_environment.zsh  reset_environment.zsh  setenv_setup.zsh
src/: README.md
src/cmd/move/: README.md
src/cmd/showme/: Main.hs
src/cmd/ssh/: ssh.hs
src/setenv/: .gitignore  Makefile  setenv.cabal
src/setenv/app/: Main.hs
src/setenv/src/: Lib.hs  Types.hs
src/setenv/test/: Spec.hs
src/ssh/: Makefile
