
cabal-version: 3.0
name:           setenv
version:        0.1.0.0
author:         Michael Lloyd
maintainer:     micl_dev@protonmail.com
category:       Console
build-type:     Simple
license:        MIT
tested-with:    GHC == 8.10.7
extra-source-files: README.md

library
  exposed-modules: Lib, Types
  other-modules: Paths_setenv
  hs-source-dirs: src
  default-language: Haskell2010

executable setenv
  main-is: Main.hs
  other-modules: Paths_setenv
  hs-source-dirs: app
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 5
               , directory >= 1.3 && < 1.4
               , process >= 1.6 && < 1.7
